[project]
name = "Muscle-Tense-Relax-Script"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "anon", email = "anon@ymo.us"},
]
dependencies = [
    "requests>=2.31.0",
    "flask>=3.0.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
